--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
