--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,19 +16,25 @@ jobs:
       - name: Print Hello message
         run: echo "Hello World from testing"
 
-      - name: Execute few commands
-        run: |
-          echo "Message1"
-          echo "Message2"
-          echo "Application name: ${{ env.APPLICATION_NAME }}"
+      - name: List current folder
+        run: ls -la
+
+      - name: Git clone my repo
+        uses: actions/checkout@v1
+      
+      - name: List current folder
+        run: ls -la
   
   my_deploy:
     runs-on: ubuntu-20.04
     needs: [my_testing]
 
     steps:
-      - name: Print Hello message
-        run: echo "Hello World from deploy"
-
       - name: Print Deploy Package Name
         run: echo "Package Name is ${{ env.DEPLOY_PACKAGE_NAME }}"
+
+      - name: Check aws cli
+        run: aws --version
+
+      - name: Check zip
+        run: zip --version
